fixed filters formatting on mobile

--- a/styles/molecules.css
+++ b/styles/molecules.css
@@ -23,19 +23,18 @@
 }
 
 .standard-input {
-    display: block;
-    padding: 1rem;
-    width: 30rem;
-    text-align: center;
-    background-color: white;
-  
-    border-style: solid;
-    border-width: var(--border-standard);
-    border-radius: 60rem;
-    border-color: var(--dominant-colour);
-    color: var(--dominant-colour);
-}
+  display: block;
+  padding: 1rem;
+  width: 30rem;
+  text-align: center;
+  background-color: white;
 
+  border-style: solid;
+  border-width: var(--border-standard);
+  border-radius: 60rem;
+  border-color: var(--dominant-colour);
+  color: var(--dominant-colour);
+}
 
 .image-wrapper {
   display: flex;
@@ -257,8 +256,6 @@ svg.fill-secondary {
   border-radius: 8px;
 }
 
-
-
 .product h3 {
   margin: var(--space-xs) 0;
   font-size: var(--font-md);
@@ -280,18 +277,18 @@ svg.fill-secondary {
   object-fit: cover;
 }
 @media all and (max-width: 600px) {
-    .product img {
-      width: 100%;
-      max-width: 90vw;
-      height: 100%;
-    }
+  .product img {
+    width: 100%;
+    max-width: 90vw;
+    height: 100%;
   }
+}
 
- /** scrolls **/
+/** scrolls **/
 
 .products__suggestion {
-    width: 30%;
-    max-width: 350px;
+  width: 30%;
+  max-width: 350px;
 }
 
 .products__scroll img {
@@ -300,38 +297,50 @@ svg.fill-secondary {
 }
 
 .products__scroll a {
-    cursor: pointer;
-    pointer-events: auto; 
-  }
-
+  cursor: pointer;
+  pointer-events: auto;
+}
 
 #services-img--a {
-    width: 40%;
-    aspect-ratio: 1 / 1.2;
-    transform: translateX(18%);
+  width: 40%;
+  aspect-ratio: 1 / 1.2;
+  transform: translateX(18%);
 }
 
 #services-img--b {
-    width: 50%;
-    aspect-ratio: 1.3 / 1;
-    transform: translateX(-15%);
+  width: 50%;
+  aspect-ratio: 1.3 / 1;
+  transform: translateX(-15%);
 }
 
 @media screen and (max-width: 600px) {
-    #services-img--a,
-    #services-img--b {
-        width: 100%;
-        aspect-ratio: 1 / 1.3;
-        transform: none;
-    }
-    
+  #services-img--a,
+  #services-img--b {
+    width: 100%;
+    aspect-ratio: 1 / 1.3;
+    transform: none;
   }
+}
 
 /** filter function **/
+.shop__filters {
+  display: grid;
+  justify-content: flex-end; /* Align buttons to the right */
+  gap: var(--space-sm); /* Add spacing between buttons */
+}
+
+.filter__buttons {
+  display: flex;
+  justify-content: ;
+  align-items: center;
+  margin-bottom: var(--space-sm);
+}
+
 .shop__filters fieldset {
   border: none;
   display: flex;
-  flex-direction: row;
+  width: 100%;
+  flex-direction: space-around;
   gap: var(--space-sm);
   margin-inline: 0;
   padding-block: 0;
@@ -342,12 +351,38 @@ svg.fill-secondary {
 .shop__filters label {
   display: block;
   margin: var(--space-sm) 0;
-  font-size: var(--font-sm);
+  font-size: clamp(var(--font-xs), 1rem, var(--font-md));
   color: var(--dominant-colour);
   background-color: white;
   padding: var(--space-sm);
   border: solid var(--border-standard);
   border-radius: 30px;
+}
+
+@media all and (max-width: 600px) {
+  .shop__filters {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--space-sm);
+  }
+  .shop__filters fieldset {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: var(--space-xxs);
+  }
+
+  .shop__filters label {
+    text-align: center;
+    padding: var(--space-xs);
+    margin: var(--space-xs) 0;
+  }
+
+  .shop__filters input[type="checkbox"] {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+  }
 }
 
 .shop__filters input[type="checkbox"] {
@@ -371,6 +406,17 @@ svg.fill-secondary {
   border-color: var(--secondary-colour);
   color: var(--secondary-colour);
   border-width: var(--border-standard);
+  box-sizing: content-box;
+  margin-left: auto; 
+}
+
+
+@media all and (max-width: 600px) {
+  #toggle-filters {
+    box-sizing: content-box;
+    margin: auto;
+    text-align: center;
+  }
 }
 
 #apply-filters {
@@ -474,8 +520,8 @@ svg.fill-secondary {
   margin: 0;
 }
 
-
-#locations-image--a > img, #locations-image--b > img {
+#locations-image--a > img,
+#locations-image--b > img {
   height: 90%;
   max-width: 350px;
 }
@@ -485,21 +531,21 @@ svg.fill-secondary {
 }
 
 #locations-image--b {
-    transform: translateX(10%);
-  }
-
+  transform: translateX(10%);
+}
 
 @media all and (max-width: 600px) {
-    #locations-image--a, #locations-image--b {
-        transform: none;
-        margin: var(--space-md);
-      }
+  #locations-image--a,
+  #locations-image--b {
+    transform: none;
+    margin: var(--space-md);
+  }
 
-      #locations-image--b {
-        position: absolute;
-        scale: 65%;
-        transform: translate(0%, 50%);
-      }
+  #locations-image--b {
+    position: absolute;
+    scale: 65%;
+    transform: translate(0%, 50%);
+  }
 }
 
 /** footer **/
@@ -508,11 +554,10 @@ svg.fill-secondary {
 }
 
 @media all and (max-width: 600px) {
-    .dfooter__input {
-      width: 70vw;
-    }
+  .dfooter__input {
+    width: 70vw;
   }
-  
+}
 
 .dfooter__links {
   display: flex;
